--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "speki-cli"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 authors = ["tor torberge@outlook.com"]
 description = "cli version of speki"
@@ -24,3 +24,5 @@ enumselector = "0.1.4"
 dialoguer = "0.11.0"
 opener = "0.7.2"
 console = "0.15.8"
+tokio = { version = "1.40.0", features = ["full"] }
+cli-justify = "0.1.3"
