--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "speki-cli"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 authors = ["tor torberge@outlook.com"]
 description = "cli version of speki"
@@ -10,8 +10,8 @@ license = "GPL-2.0-only"
 [dependencies]
 clap = { version = "4.5.17", features = ["derive"] }
 skim = "0.10.4"
-#speki-core = "0.1.5"
-speki-core = { path = "../speki-core" }
+speki-core = "0.1.8"
+#speki-core = { path = "../speki-core" }
 text_io = "0.1.12"
 strum = "0.24"
 strum_macros = "0.24"
