--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,10 @@ license = "GPL-2.0-only"
 [dependencies]
 clap = { version = "4.5.17", features = ["derive"] }
 skim = "0.10.4"
-speki-core = "0.1.8"
-#speki-core = { path = "../speki-core" }
-text_io = "0.1.12"
+#speki-core = "0.1.8"
+speki-core = { path = "../speki-core" }
 strum = "0.24"
 strum_macros = "0.24"
-tordir = "0.1.3"
 serde = "1.0.210"
 serde_json = "1.0.128"
 uuid = { version = "1.0", features = ["v4", "serde"] }
